--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  Description:  Storefront child theme for Empire Triathlon Club
  Author:       Jean Kim
  Author URI:   http://jeanyoungkim.com
- Template:     storefront
+ Template:     jeankim
  Version:      1.0.0
 */
 
